@@ -5,12 +5,14 @@
 
 Not to mention all bugfixes and rewrites.
 
-Coccinella-0.96.? (200708??)
+Coccinella-0.96.? (200709??)
 
  o added support for XEP-0172: User Nickname
  o added autoaway which detects any system inactivity like mouse and keyboard
  o added user activity XEP-0108: User Activity
  o added support for XEP-0106: JID Escaping
+ o vCards can be exported to xml files
+ o major revision of user experience
 
 Coccinella-0.96.0 (20070525)
 
